--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "mongoose": "^7.2.3",
+    "node-snackbar": "^0.1.16",
     "nodemon": "^2.0.22"
   }
 }
