--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb+srv://spap2026:99NX3XEahqPeswdx@cluster0.lkwztvy.mongodb.net/
+MONGO_URI=mongodb+srv://spap2026:j5tzTDhUaFZoGGx3@cluster0.lkwztvy.mongodb.net/
