--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "node-fetch": "^3.3.1",
     "node-snackbar": "^0.1.16",
     "ejs": "^3.1.9",
-    "express": "^4.18.2",
+    "express": "^4.18.2"
 
   }
 }
