--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
     "jwt-decode": "^3.1.2",
     "mongoose": "^6.10.1",
     "node-fetch": "^3.3.1",
-    "node-snackbar": "^0.1.16"
+    "node-snackbar": "^0.1.16",
+    "socket.io": "^4.6.2",
+    "socket.io-client": "^4.6.2"
+  },
+  "devDependencies": {
+    "snowpack": "^3.8.8"
   }
 }
